--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.pythonPath": "venv/bin/python",
-    "python.linting.pep8Enabled":true,
-    "python.linting.pylintEnabled": true
+    "python.linting.pycodestyleEnabled":false,
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
